2016-07-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #2529

2016-07-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/expf.c: ensure exponent not random before normalization

2016-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2385.c:
	  Disable a test for tlcs90, so all tests compile for tlcs90.

2016-07-26 Daniel Drotos <drdani AT mazsola.iit.uni-miskolc.hu>

	* sim/ucsim/.version, sim/ucsim/Makefile.in, sim/ucsim/NEWS,
	  sim/ucsim/README, sim/ucsim/TODO, sim/ucsim/app.cc,
	  sim/ucsim/appcl.h, sim/ucsim/avr.src/Makefile.in,
	  sim/ucsim/avr.src/avr.cc, sim/ucsim/avr.src/avrcl.h,
	  sim/ucsim/avr.src/savr.cc, sim/ucsim/c.sh, sim/ucsim/chars.cc,
	  sim/ucsim/charscl.h, sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/cmd.src/bp.cc, sim/ucsim/cmd.src/bpcl.h,
	  sim/ucsim/cmd.src/cmd_bp.cc, sim/ucsim/cmd.src/cmd_bpcl.h,
	  sim/ucsim/cmd.src/cmd_conf.cc, sim/ucsim/cmd.src/cmd_confcl.h,
	  sim/ucsim/cmd.src/cmd_exec.cc, sim/ucsim/cmd.src/cmd_execcl.h,
	  sim/ucsim/cmd.src/cmd_get.cc, sim/ucsim/cmd.src/cmd_getcl.h,
	  sim/ucsim/cmd.src/cmd_gui.cc, sim/ucsim/cmd.src/cmd_guicl.h,
	  sim/ucsim/cmd.src/cmd_info.cc, sim/ucsim/cmd.src/cmd_infocl.h,
	  sim/ucsim/cmd.src/cmd_mem.cc, sim/ucsim/cmd.src/cmd_memcl.h,
	  sim/ucsim/cmd.src/cmd_set.cc, sim/ucsim/cmd.src/cmd_setcl.h,
	  sim/ucsim/cmd.src/cmd_show.cc, sim/ucsim/cmd.src/cmd_showcl.h,
	  sim/ucsim/cmd.src/cmd_stat.cc, sim/ucsim/cmd.src/cmd_statcl.h,
	  sim/ucsim/cmd.src/cmd_timer.cc, sim/ucsim/cmd.src/cmd_timercl.h,
	  sim/ucsim/cmd.src/cmd_uc.cc, sim/ucsim/cmd.src/cmd_uccl.h,
	  sim/ucsim/cmd.src/cmdconf.cc, sim/ucsim/cmd.src/cmdconfcl.h,
	  sim/ucsim/cmd.src/cmdgui.cc, sim/ucsim/cmd.src/cmdguicl.h,
	  sim/ucsim/cmd.src/cmdlex.l, sim/ucsim/cmd.src/cmdmem.cc,
	  sim/ucsim/cmd.src/cmdmemcl.h, sim/ucsim/cmd.src/cmdpars.y,
	  sim/ucsim/cmd.src/cmdset.cc, sim/ucsim/cmd.src/cmdsetcl.h,